	* version: 2.4.8
	* BUGFIX: fix bug that checkpoint.storage.db does not work since v2.4.6.
	* BUGFIX: fix bug of orphan document filter core. #389.
	* IMPROVE: remove listDatabase request when incr_sync.shard_key != auto.
	#385.
	* IMPROVE: add oplog_max_size and oplog_avg_size metric in restful: "repl/".
	* BUGFIX: fix bug of checkpoint duplicate updating when HA switch.

2020-06-30 Alibaba Cloud.
	* version: 2.4.7
	* IMPROVE: add exit-point and safe shutdown mechanism. #375, #162
	* IMPROVE: add UpdateLookup options in change stream. #350. thanks for
	the PR by Raydy.
	* IMPROVE: open full_sync.reader.read_document_count parameter to improve
	full sync performance when meeting jumbo table.
	* IMPROVE: polish log: remove function information in log.

2020-06-17 Alibaba Cloud.
	* version: 2.4.6
	* IMPROVE: when running full sync, change sync source from mongod to
	mongos. #360
	* IMPROVE: when source type is sharding, change checkpoint position from
	config-server to mongos.
	* BUGFIX: fix bug of whether the starting time oplog is legal: the oldest
	oplog timestamp > checkpoint.start_position
	* IMPROVE: convert kafka producer MaxMessageBytes configuration from 1MB
	to 16MB. #369.
	* IMPROVE: add target delay parameter just like MongoDB primary-secondary
	SlaveDelay. #371.

2020-06-08 Alibaba Cloud.
	* version: 2.4.5
	* BUGFIX: fix bug of ignore error wrong when parsed error list is nil.

2020-06-05 Alibaba Cloud.
	* version: 2.4.4
	* BUGFIX: fix bug of "two $set" in update query. see #345.
	* BUGFIX: fix bug of source mongodb judgement error. see #343.
	* IMPROVE: solve the idempotency problem of oplog synchronization
	during the initial sync period. see #345.

2020-05-14 Alibaba Cloud.
	* version: 2.4.3
	* BUGFIX: rename `full_sync.collection_exist_no_drop` to
	`full_sync.collection_exist_drop`.

2020-04-22 Alibaba Cloud.
	* version: 2.4.2
	* BUGFIX: fix bug of applyOps run failed. #329

2020-04-09 Alibaba Cloud.
	* version: 2.4.1